--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-02  Luc Teirlinck  <teirllm@auburn.edu>
+
+	* killing.texi (Killing): Correct description of kill commands in
+	read-only buffer.
+
 2004-09-02  Teodor Zlatanov  <tzz@lifelogs.com>
 
 	* building.texi (Compilation Mode): Add a paragraph about rules
