Changes from arch/CVS synchronization

--- a/lisp/gnus/ChangeLog.2
+++ b/lisp/gnus/ChangeLog.2
@@ -18920,3 +18920,5 @@
     Copyright (C) 2002, 2003, 2004 Free Software Foundation, Inc.
   Copying and distribution of this file, with or without modification,
   are permitted provided the copyright notice and this notice are preserved.
+
+;; arch-tag: 13460c90-d3bc-4be2-9e15-c7c271d0c1eb
